--- a/app/src/main/res/layout/activity_main__registrar_usuario_.xml
+++ b/app/src/main/res/layout/activity_main__registrar_usuario_.xml
@@ -148,11 +148,14 @@
             <Button
                 android:id="@+id/btAgregar"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="35dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="15dp"
                 android:background="#1976d2"
-                android:text="REGISTRAR"
                 android:textColor="#FFF"
-                android:textSize="15sp" />
+                android:textSize="14sp"
+                android:text="REGISTRAR" />
         </LinearLayout>
     </ScrollView>
 
