--- a/app/src/main/res/layout/activity_main__add_bicicleta_.xml
+++ b/app/src/main/res/layout/activity_main__add_bicicleta_.xml
@@ -8,30 +8,32 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="100dp"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="100dp"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
+                android:text="DIA:"
                 android:textSize="24sp"
-                android:textStyle="bold"
-                android:text="DIA:" />
+                android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/edDia"
+                android:id="@+id/edFecha"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:ems="10"
                 android:enabled="false"
                 android:gravity="center"
-                android:ems="10"
                 android:inputType="textPersonName" />
 
             <TextView
@@ -39,17 +41,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
+                android:text="BICICLETA:"
                 android:textSize="24sp"
-                android:textStyle="bold"
-                android:text="BICICLETA:" />
+                android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/edBici"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:ems="10"
                 android:enabled="false"
                 android:gravity="center"
-                android:ems="10"
                 android:inputType="textPersonName" />
 
             <TextView
@@ -57,17 +59,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
+                android:text="USUARIO:"
                 android:textSize="24sp"
-                android:textStyle="bold"
-                android:text="USUARIO:" />
+                android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/edUsuario"
+                android:id="@+id/edNick"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:ems="10"
                 android:enabled="false"
                 android:gravity="center"
-                android:ems="10"
                 android:inputType="textPersonName" />
 
             <TextView
@@ -75,30 +77,30 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
+                android:text="TELEFONO:"
                 android:textSize="24sp"
-                android:textStyle="bold"
-                android:text="TELEFONO:" />
+                android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/edTelefono"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:ems="10"
                 android:enabled="false"
                 android:gravity="center"
-                android:ems="10"
                 android:inputType="textPersonName" />
 
             <Button
                 android:id="@+id/btnAlquilarBici"
                 android:layout_width="match_parent"
-                android:textColor="#FFF"
-                android:textSize="14sp"
                 android:layout_height="35dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginRight="15dp"
                 android:background="#1976d2"
-                android:text="ALQUILAR" />
+                android:text="ALQUILAR"
+                android:textColor="#FFF"
+                android:textSize="14sp" />
 
             <TextView
                 android:id="@+id/tvRespo"
@@ -139,6 +141,8 @@
                 android:text="TextView"
                 android:visibility="invisible"
                 tools:visibility="invisible" />
+
+
 
         </LinearLayout>
     </ScrollView>
