--- a/app/src/main/res/layout/activity_main__add_pista_.xml
+++ b/app/src/main/res/layout/activity_main__add_pista_.xml
@@ -8,13 +8,15 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="60dp"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="100dp"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/tvIDUSUARIO"
@@ -34,25 +36,25 @@
                 tools:visibility="invisible" />
 
             <TextView
-                android:id="@+id/tvUsuario"
+                android:id="@+id/tvNick"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
+                android:text="USUARIO"
                 android:textSize="24sp"
-                android:textStyle="bold"
-                android:text="USUARIO" />
+                android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/edUsuario"
+                android:id="@+id/edNick"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:ems="10"
                 android:enabled="false"
                 android:gravity="center"
-                android:ems="10"
                 android:text="Name" />
 
             <TextView
-                android:id="@+id/tvPista"
+                android:id="@+id/tvNombre1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -61,30 +63,30 @@
                 android:text="PISTA" />
 
             <EditText
-                android:id="@+id/edPista"
+                android:id="@+id/edNombre"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:ems="10"
                 android:enabled="false"
                 android:gravity="center"
-                android:ems="10"
                 android:text="Name" />
 
             <TextView
-                android:id="@+id/tvDIA"
+                android:id="@+id/tvFecha"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
+                android:text="FECHA"
                 android:textSize="24sp"
-                android:textStyle="bold"
-                android:text="FECHA" />
+                android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/edDia"
+                android:id="@+id/edFecha"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:ems="10"
                 android:enabled="false"
                 android:gravity="center"
-                android:ems="10"
                 android:text="Name" />
 
             <TextView
@@ -92,30 +94,50 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
+                android:text="HORA"
                 android:textSize="24sp"
-                android:textStyle="bold"
-                android:text="HORA" />
+                android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/edHora"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:ems="10"
                 android:enabled="false"
                 android:gravity="center"
-                android:ems="10"
                 android:text="Name" />
 
-            <Button
-                android:id="@+id/btnAlquilar"
+            <TextView
+                android:id="@+id/tvDevuelto"
                 android:layout_width="match_parent"
-                android:textColor="#FFF"
-                android:textSize="14sp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="MATERIAL"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+
+            <Spinner
+                android:id="@+id/spDevuelo"
+                android:layout_width="115dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="150dp"
+                android:gravity="right"
+                android:padding="12dp"
+                android:textAlignment="gravity"
+                android:verticalScrollbarPosition="left" />
+
+            <Button
+                android:id="@+id/btnBorrar"
+                android:layout_width="match_parent"
                 android:layout_height="35dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginRight="15dp"
                 android:background="#1976d2"
-                android:text="ALQUILAR" />
+                android:text="ALQUILAR"
+                android:textColor="#FFF"
+                android:textSize="14sp" />
+
         </LinearLayout>
     </ScrollView>
 
