--- a/app/src/main/res/layout/activity_main__dias_bicicletas_.xml
+++ b/app/src/main/res/layout/activity_main__dias_bicicletas_.xml
@@ -1,70 +1,149 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/cesped"
-    android:orientation="vertical"
-    tools:context=".Main_DiasBicicletas_Activity">
-
-
-    <ScrollView
-        android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="150dp">
+        tools:context=".Main_DiasBicicletas_Activity">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
+        <TabHost
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:id="@+id/tabHost"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true">
 
-            <Button
-                android:id="@+id/btnLunes"
-                android:layout_width="match_parent"
-                android:layout_height="35dp"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginRight="15dp"
-                android:background="#1976d2"
-                android:onClick="Lunes"
-                android:text="LUNES"
-                android:textColor="#FFF"
-                android:textSize="14sp"
-                tools:layout_editor_absoluteX="29dp"
-                tools:layout_editor_absoluteY="318dp" />
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:orientation="vertical">
 
-            <Button
-                android:id="@+id/btnMiercoles"
-                android:layout_width="match_parent"
-                android:layout_height="35dp"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginRight="15dp"
-                android:background="#1976d2"
-                android:onClick="Miercoles"
-                android:text="MIERCOLES"
-                android:textColor="#FFF"
-                android:textSize="14sp"
-                tools:layout_editor_absoluteX="29dp"
-                tools:layout_editor_absoluteY="318dp" />
+                <TabWidget
+                    android:id="@android:id/tabs"
+                    android:layout_width="fill_parent"
+                    android:layout_height="56dp"></TabWidget>
 
-            <Button
-                android:id="@+id/btnViernes"
-                android:layout_width="match_parent"
-                android:layout_height="35dp"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginRight="15dp"
-                android:background="#1976d2"
-                android:onClick="Viernes"
-                android:text="VIERNES"
-                android:textColor="#FFF"
-                android:textSize="14sp"
-                tools:layout_editor_absoluteX="29dp"
-                tools:layout_editor_absoluteY="318dp" />
-        </LinearLayout>
-    </ScrollView>
+                <FrameLayout
+                    android:id="@android:id/tabcontent"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent">
 
-</LinearLayout>
+                    <LinearLayout
+                        android:id="@+id/Lunes"
+                        android:layout_width="fill_parent"
+                        android:layout_height="614dp"
+                        android:orientation="vertical">
 
+                        <TextView
+                            android:id="@+id/textView20"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="tvNombre"
+                            android:visibility="invisible" />
+
+                        <TextView
+                            android:id="@+id/textView15"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="                                               BICICLETA                                        "
+                            android:textColor="#3F51B5"
+                            android:textSize="14sp"
+                            android:textStyle="bold" />
+
+                        <ScrollView
+                            android:layout_width="match_parent"
+                            android:layout_height="528dp">
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="vertical">
+
+                                <ListView
+                                    android:id="@+id/lvDatos"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="521dp" />
+                            </LinearLayout>
+                        </ScrollView>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/Miercoles"
+                        android:layout_width="fill_parent"
+                        android:layout_height="614dp"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/textView14"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="TextView"
+                            android:visibility="invisible"
+                            tools:visibility="invisible" />
+
+                        <TextView
+                            android:id="@+id/textView16"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="                                               BICICLETA                                      "
+                            android:textColor="#3F51B5"
+                            android:textSize="14sp"
+                            android:textStyle="bold" />
+
+                        <ScrollView
+                            android:layout_width="match_parent"
+                            android:layout_height="528dp">
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="vertical" >
+
+                                <ListView
+                                    android:id="@+id/lvMiercoles"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="521dp" />
+                            </LinearLayout>
+                        </ScrollView>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/PILATES"
+                        android:layout_width="fill_parent"
+                        android:layout_height="614dp"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/textView21"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="TextView"
+                            android:visibility="invisible"
+                            tools:visibility="invisible" />
+
+                        <TextView
+                            android:id="@+id/textView19"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="                                               BICICLETA                                      "
+                            android:textColor="#3F51B5"
+                            android:textSize="14sp"
+                            android:textStyle="bold" />
+
+                        <ScrollView
+                            android:layout_width="match_parent"
+                            android:layout_height="528dp">
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="vertical" >
+
+                                <ListView
+                                    android:id="@+id/lvViernes"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="521dp" />
+                            </LinearLayout>
+                        </ScrollView>
+                    </LinearLayout>
+                </FrameLayout>
+            </LinearLayout>
+        </TabHost>
+    </RelativeLayout>
