--- a/app/src/main/res/layout/activity_main__eliminar_bicicleta_.xml
+++ b/app/src/main/res/layout/activity_main__eliminar_bicicleta_.xml
@@ -28,7 +28,7 @@
                 android:text="DIA:" />
 
             <EditText
-                android:id="@+id/edDia"
+                android:id="@+id/edFecha"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -47,7 +47,7 @@
                 android:text="BICICLETA:" />
 
             <EditText
-                android:id="@+id/edBicicleta"
+                android:id="@+id/edActividad"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -66,7 +66,7 @@
                 android:text="USUARIO:" />
 
             <EditText
-                android:id="@+id/edUsuario"
+                android:id="@+id/edNick"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
