--- a/app/src/main/res/layout/activity_main__eliminar_editar__mi_pista_.xml
+++ b/app/src/main/res/layout/activity_main__eliminar_editar__mi_pista_.xml
@@ -66,7 +66,7 @@
                 android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/edPista"
+                android:id="@+id/edNombre"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -85,7 +85,7 @@
                 android:textStyle="bold" />
 
             <Spinner
-                android:id="@+id/snMaterial"
+                android:id="@+id/spDevuelo"
                 android:layout_width="115dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="150dp"
